--- a/views/home.html
+++ b/views/home.html
@@ -22,7 +22,7 @@
         </h3>
         <ul>
             <li>
-                <a href="">Ofertas</a>
+                <a href="/">Ofertas</a>
             </li>
             <li>
                 <a href="">Tiendas Oficiales</a>
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="/login">
                     Ingresá
                     <i class="fas fa-sign-in-alt"></i>
                 </a>
@@ -63,7 +63,51 @@
     </header>
     <main class="main-container">
         <section>
-            <h3 class="titulo-" >Últimas visitas</h3>
+            <h3 class="titulo-ofertas" >Últimas visitas</h3>
+            <div class="lista-productos">
+                <article class="producto">
+                    <img calass="img-producto" src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                    <i class="fas fa-truck"></i>
+                    <div class="info-productos">
+                        <p class="precio">$6.770</p>
+                        <p class="descripcion">40% OFF</p>
+                    </div>
+                    <h4 class="nombre-producto">Cafetera Moulinex</h4>
+                </article>
+
+                <article class="producto">
+                    <img calass="img-producto" src="./images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+                    <i class="fas fa-truck"></i>
+                    <div class="info-productos">
+                        <p class="precio">$230.000</p>
+                        <p class="descripcion">20% off</p>
+                    </div>
+                    <h4 class="nombre-producto">MacBook Pro 2019</h4>
+                </article>
+
+                <article class="producto">
+                    <img calass="img-producto" src="./images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+                    <i class="fas fa-truck"></i>
+                    <div class="info-productos">
+                        <p class="precio">$70.500</p>
+                        <p class="descripcion">10% off</p>
+                    </div>
+                    <h4 class="nombre-producto">Samsung Galaxy S10</h4>
+                </article>
+
+                <article class="producto">
+                    <img calass="img-producto" src="./images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43"">
+                    <i class="fas fa-truck"></i>
+                    <div class=" info-productos">
+                        <p class="precio">$23.200</p>
+                        <p class="descripcion">5% off</p>
+                    </div>
+                    <h4 class="nombre-producto">SmartTv Samsung 43" </h4>
+                </article>
+            </div>
+        </section>
+        <section>
+            <h3 class="titulo-ofertas" >Ofertas</h3>
             <div class="lista-productos">
                 <article class="producto">
                     <img calass="img-producto" src="./images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
