--- a/views/login.html
+++ b/views/login.html
@@ -62,95 +62,21 @@
         </div>
     </header>
     <main class="register-container">
-        <form class="form-register" action="form" method="post" >
-            <!-- Nombre y apellido -->
-            <div class="form-item-content" >
-                <label for="name">Nombre y apellido</label>
-                <input type="text" name="name" id="name" required >
-            </div>
+        <form class="form-register" method="post" action="form">
             <!-- Nombre de usuario -->
             <div class="form-item-content" >
                 <label for="username">Nombre de usuario</label>
                 <input type="text" name="username" id="username" >
-            </div>
-            <!-- Fecha de nacimiento -->
-            <div class="form-item-content" >
-                <label for="date">Fecha de nacimiento</label>
-                <input type="datetime-local" name="date" id="date" >
-            </div>
-            <!-- Domicilio -->
-            <div class="form-item-content" >
-                <label for="address">Domicilio</label>
-                <input type="text" name="address" id="address" >
-            </div>
-            <!-- Perfil del usuario (consultar a l@s usuari@s si quieren comprar o vender) -->
-            <div class="form-item-content" >
-                <label>Perfil del usuario</label>
-                <div class="form-group" >
-                    <div>
-                        <input type="radio" name="profile" id="sell" >
-                        <label for="sell">Vendedor</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="profile" id="buy" >
-                        <label for="buy">Comprador</label>
-                    </div>
-                </div>
-            </div>
-            <!-- Categorías de interés (puede elegir más de una) -->
-            <div class="form-item-content" >
-                <label>Categorías de interes</label>
-                <div class="form-group" >
-                    <!-- Electro -->
-                    <div>
-                        <input type="checkbox" name="electro" id="electro" >
-                        <label for="electro">Electro</label>
-                    </div>
-                    <!-- Moda -->
-                    <div>
-                        <input type="checkbox" name="moda" id="moda" >
-                        <label for="moda">Moda</label>
-                    </div>
-                    <!-- Hogar -->
-                    <div>
-                        <input type="checkbox" name="home" id="home" >
-                        <label for="home">Hogar</label>
-                    </div>
-                    <!-- Juguetería -->
-                    <div>
-                        <input type="checkbox" name="toys" id="toys" >
-                        <label for="toys">Juguetería</label>
-                    </div>
-                    <!-- Vida sana -->
-                    <div>
-                        <input type="checkbox" name="life-sanity" id="life-sanity" >
-                        <label for="life-sanity">Vida sana</label>
-                    </div>
-                </div>
-            </div>
-            <!-- Foto de usuario -->
-            <div class="form-item-content" >
-                <label for="file">Foto de usuario</label>
-                <input type="file" name="file" id="file" >
             </div>
             <!-- Contraseña -->
             <div class="form-item-content" >
                 <label for="password">Contraseña</label>
                 <input type="password" name="password" id="password" >
             </div>
-            <!-- Confirmar contraseña -->
-            <div class="form-item-content" >
-                <label for="confirm-password">Repetir contraseña</label>
-                <input type="password" name="confirm-password" id="confirm-password" >
-            </div>
             <!-- Botón de enviar que nos lleve a la página principal -->
             <div class="form-item-content" >
-                <button type="submit" href="/#" >Registrarse</button>
+                <button type="submit" >Ingresar</button>
             </div>
-            <!-- Botón de borrar todos los datos del formulario -->
-            <div class="form-item-content" >
-                <button type="reset" href="/#" >Limpiar</button>
-            </div> 
         </form>
     </main>
     <footer>
