--- a/views/home.html
+++ b/views/home.html
@@ -20,47 +20,49 @@
             <i class="fas fa-hand-holding-usd"></i>
             Comprá en cuotas y sin tarjeta de crédito
         </h3>
-        <ul>
-            <li>
-                <a href="/">Ofertas</a>
-            </li>
-            <li>
-                <a href="">Tiendas Oficiales</a>
-            </li>
-            <li>
-                <a href="">Vender</a>
-            </li>
-            <li>
-                <a href="">Ayuda</a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <a href="/register">
-                    Creá tu cuenta
-                    <i class="far fa-id-card"></i>
-                </a>
-            </li>
-            <li>
-                <a href="/login">
-                    Ingresá
-                    <i class="fas fa-sign-in-alt"></i>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    Mis compras
-                    <i class="fas fa-shopping-basket"></i>
-                </a>
-            </li>
-        </ul>
+        <div class="nav-bar" >
+            <ul class="list">
+                <li class="list-item">
+                    <a href="/">Ofertas</a>
+                </li>
+                <li class="list-item">
+                    <a href="">Tiendas Oficiales</a>
+                </li>
+                <li class="list-item">
+                    <a href="">Vender</a>
+                </li>
+                <li class="list-item">
+                    <a href="">Ayuda</a>
+                </li>
+            </ul>
+            <ul class="list" >
+                <li class="list-item">
+                    <a href="/register">
+                        Creá tu cuenta
+                        <i class="far fa-id-card"></i>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="/login">
+                        Ingresá
+                        <i class="fas fa-sign-in-alt"></i>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="">
+                        Mis compras
+                        <i class="fas fa-shopping-basket"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="banner__container">
-            <img src="./images/img-home-banner.jpg" width="360" alt="Banner de ofertas" />
-        </div>
     </header>
+    <div class="banner__container">
+        <img src="./images/img-home-banner.jpg" width="360" alt="Banner de ofertas" />
+    </div>
     <main class="main-container">
         <section>
             <h3 class="titulo-ofertas" >Últimas visitas</h3>
